# xemacs-git

./: .gitignore  CHANGES-beta  CHANGES-release  CMakeLists.txt  ChangeLog  INSTALL  INSTALL-CMAKE.md  Makefile.in.in  PROBLEMS  README  config-h-cmake.h  config-h-configure.h  config-log-configure.txt  configure  configure.ac  configure.in  configure.usage  modern-build-toolchain.md  supported-target-systems.md  version.sh  version.sh.in
.trae/documents/: build_failure_root_cause_analysis_plan.md  cmake_build_validation_plan.md  cmake_config_fix_plan.md  cmake_macro_analysis.md  cmake_migration_plan.md  cmake_timeval_fix_plan.md
cmake/: Installation.txt.in  XEmacsCPack.cmake  XEmacsConfigure.cmake  XEmacsOS.cmake  XEmacsOptions.cmake
cmake/Modules/: FindCanna.cmake  FindWnn.cmake
etc/: ChangeLog  Emacs.ad  NEWS  OXYMORONS  PACKAGES  TUTORIAL.cs  TUTORIAL.de  TUTORIAL.es  TUTORIAL.fr  TUTORIAL.hr  TUTORIAL.ja  TUTORIAL.ko  TUTORIAL.no  TUTORIAL.pl  TUTORIAL.ro  TUTORIAL.ru  TUTORIAL.se  TUTORIAL.sk  TUTORIAL.sl  TUTORIAL.th  VEGETABLES  package-index.LATEST.gpg  package-index.LATEST.pgp  xemacs.desktop
lib-src/: CMakeLists.txt  ChangeLog  Makefile.in.in  chkmalloc.h  config.values.in  cvtmail.c  ellcc.c  etags.c  fakemail.c  gnuclient.c  gnuserv.c  gnuserv.h  gnuslib.c  hexl.c  make-docfile.c  make-mswin-unicode.pl  ootags.c  vcdiff  winclient.c
lisp/: ChangeLog  abbrev.el  about.el  apropos.el  auto-save.el  auto-show.el  autoload.el  backquote.el  buff-menu.el  buffer.el  build-report.el  byte-optimize.el  bytecomp-runtime.el  bytecomp.el  cl-extra.el  cl-macs.el  cl.el  cmdloop.el  code-cmds.el  code-files.el  code-init.el  code-process.el  coding.el  compat.el  compose.el  config.el  config.values.el  console.el  cus-dep.el  cus-edit.el  cus-face.el  cus-file.el  custom-load.el  custom.el  descr-text.el  device.el  diagnose.el  dialog-gtk.el  dialog-items.el  dialog.el  (+126 more)
lisp/mule/: china-util.el  compiled-unicode-tables.el  cyrillic.el  devan-util.el  digit.el  english.el  ethio-util.el  general-early.el  greek.el  iso-with-esc.el  japan-util.el  kinsoku.el  korea-util.el  latin.el  make-digit.el  mule-category.el  mule-charset.el  mule-cmds.el  mule-coding.el  mule-composite-stub.el  mule-msw-init-late.el  mule-win32-init.el  tibet-util.el  uni-case-conv.el  viet-util.el  windows.el
lisp/term/: bobcat.el  cygwin.el  linux.el  scoansi.el  tvi970.el  vt102.el  vt125.el  vt200.el  vt240.el  vt300.el  vt320.el  vt400.el  vt420.el  xterm.el
lwlib/: CMakeLists.txt  ChangeLog  Makefile.in.in  config.h.in  config.h.in.cmake  lwlib-Xaw.c  lwlib-Xlw.c  lwlib-Xm.c  lwlib-colors.c  lwlib-colors.h  lwlib-fonts.c  lwlib-fonts.h  lwlib-internal.h  lwlib.c  lwlib.h  xlwcheckbox.c  xlwgauge.c  xlwmenu.c  xlwmenu.h  xlwmenuP.h  xlwradio.c  xlwscrollbar.c  xlwtabs.c
man/: ChangeLog  beta.texi  cl.texi  custom.texi  emodules.texi  external-widget.texi  info.texi  standards.texi  term.texi  termcap.texi  widget.texi  xemacs-faq.texi
man/internals/: internals.texi
man/lispref/: abbrevs.texi  annotations.texi  back.texi  backups.texi  buffers.texi  building.texi  commands.texi  compile.texi  consoles-devices.texi  control.texi  customize.texi  databases.texi  debugging.texi  dialog.texi  display.texi  dragndrop.texi  edebug-inc.texi  edebug.texi  errors.texi  eval.texi  extents.texi  faces.texi  files.texi  frames.texi  functions.texi  glyphs.texi  gutter.texi  hash-tables.texi  help.texi  hooks.texi  index.texi  internationalization.texi  intro.texi  keymaps.texi  ldap.texi  lispref.texi  lists.texi  loading.texi  locals.texi  macros.texi  (+30 more)
man/new-users-guide/: custom2.texi  new-users-guide.texi  xmenu.texi
man/xemacs/: abbrevs.texi  basic.texi  buffers.texi  building.texi  calendar.texi  cmdargs.texi  custom.texi  display.texi  files.texi  fixit.texi  frame.texi  glossary.texi  indent.texi  keystrokes.texi  killing.texi  menus.texi  misc.texi  new.texi  picture.texi  programs.texi  regs.texi  search.texi  sending.texi  text.texi  trouble.texi  windows.texi  xemacs.texi
modules/: CMakeLists.txt  ChangeLog  README
modules/base64/: Makefile
modules/canna/: canna_api.c  configure  configure.ac
modules/common/: Makefile.common  configure-post.ac
modules/ldap/: configure  eldap.c  eldap.h
modules/postgresql/: configure  postgresql.c  postgresql.h
modules/sample/internal/: Makefile.in.in  configure.ac
modules/zlib/: Makefile
netinstall/: ChangeLog  res.rc
nt/: ChangeLog  XEmacs.iss  config.inc.samp  xemacs.dsp  xemacs.mak
nt/inc/: process.h
src/: .gdbinit  .gdbinit.in.in  CMakeLists.txt  ChangeLog  EmacsFrame.c  EmacsManager.c  EmacsManager.h  EmacsShell-sub.c  ExternalShell.c  Makefile.in.in  abbrev.c  alloc.c  alloca.c  array.c  array.h  backtrace.h  buffer.c  buffer.h  bufslots.h  bytecode-ops.h  bytecode.c  bytecode.h  callint.c  callproc.c  casetab.c  charset.h  chartab.c  chartab.h  cmdloop.c  cmds.c  commands.h  compiler.h  config.h.in  config.h.in.cmake  console-gtk-impl.h  console-gtk.c  console-gtk.h  console-impl.h  console-msw-impl.h  console-msw.c  (+240 more)
src/m/: alpha.h  arm.h  hp800.h  ibmrs6000.h  intel386.h  m68k.h  mips.h  powerpc.h  sparc.h  template.h  windowsnt.h
src/s/: cygwin-common.h  cygwin32.h  gnu.h  linux.h  mingw32.h  netbsd.h  sol2.h  usg5-4.h  win32-native.h  windowsnt.h
tests/: ChangeLog  number-openssl-tests.c  redisplay-tests.el  reproduce-crashes.el
tests/automated/: buffer-tests.el  byte-compiler-tests.el  call-interactively.el  color-tests.el  event-tests.el  extent-tests.el  file-tests.el  format-tests.el  keymap-tests.el  lisp-reader-tests.el  lisp-tests.el  mule-tests.el  regexp-tests.el  region-tests.el  search-tests.el  symbol-tests.el  tag-test.el  test-harness.el
